# ftp-sync

./: .env_example  .gitignore  CLAUDE.md  LICENSE  README.md  config.py  deployignore.py  ftp_ops.py  hash_db.py  main.py  php_config.py  pyproject.toml  settings_example.ini  sync.py  sync_example.bat  update.bat  watcher.py
claude-plans/: readme-md-doesnt-state-the-scalable-turtle.md  reflective-purring-unicorn.md
examples/: concurrent_download.ini  download_and_cleanup.ini  ftps_secure.ini  multi_source_upload.ini  simple_download.ini  simple_upload.ini  upload_ignore_dirs.ini  upload_with_hash_cache.ini
tests/: test_config.py  test_deployignore.py  test_ftp_mtime.py  test_hash_db.py  test_php_config.py  test_sync.py
tools/: config_example.php
