[project]
name = "ftp-sync"
version = "1.0.0"
description = "Sync a local folder with an FTP folder"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
